Port intelliplug and rq_stats from faux123

--- a/.config
+++ b/.config
@@ -395,6 +395,8 @@ CONFIG_CAPRI_LPDDR2_AUTO_VREF=y
 # CONFIG_SEC_MODEM_CRATER_TD is not set
 # CONFIG_LINK_DEVICE_SPI is not set
 # CONFIG_SPI_KONA_SSP3_SUPPORT is not set
+CONFIG_INTELLI_PLUG=y
+CONFIG_RQ_STATS=y
 
 #
 # Custom Capri SS BAFFIN based Machine types
