--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -247,6 +247,11 @@ config CPU_FREQ_GOV_ADAPTIVE
 
 	  If in doubt, say N.
 
+config CPU_FREQ_GOV_PEGASUSQ
+	  tristate "'pegasusq' cpufreq policy governor"
+	  depends on CPU_FREQ
+
+
 menu "x86 CPU frequency scaling drivers"
 depends on X86
 source "drivers/cpufreq/Kconfig.x86"
