--- a/.config
+++ b/.config
@@ -1147,6 +1147,7 @@ CONFIG_BCMPMU_AUDIO=y
 # CONFIG_BRALLOC_MEM is not set
 CONFIG_BCM_RFKILL=y
 CONFIG_BCM_BT_LPM=y
+CONFIG_BCM_BT_INVERSE_POLARITY=y
 CONFIG_RECOVERY=y
 CONFIG_BCM_VC_SERVICES=y
 # CONFIG_STM_TRACE is not set
