--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -121,6 +121,12 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactive' governor for latency-sensitive workloads.
 
+config CPU_FREQ_DEFAULT_GOV_SMARTASSH3
+         bool "smartassH3
+         select CPU_FREQ_GOV_SMARTASSH3
+         help
+          Use the CPUFreq governor 'smartassH3' as default
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -250,6 +256,14 @@ config CPU_FREQ_GOV_ADAPTIVE
 config CPU_FREQ_GOV_PEGASUSQ
 	  tristate "'pegasusq' cpufreq policy governor"
 	  depends on CPU_FREQ
+
+config CPU_FREQ_GOV_SMARTASSH3
+          tristate "'smartassH3' cpufreq policy governor"
+          depends on CPU_FREQ
+          help
+          'smartassH3' - is designed for battery saving and not pushing the phones performance
+
+          If in doubt, say N.
 
 
 menu "x86 CPU frequency scaling drivers"
