--- a/arch/arm/configs/cyanogenmod_i9082_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9082_defconfig
@@ -542,6 +542,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_ADAPTIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
 # CONFIG_CPU_FREQ_GOV_PEGASUSQ is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
